<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_add_habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/add_habit"
        android:textAppearance="@style/text_style"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_habit_name"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:background="@drawable/enter_habit_inactive_bg"
        android:hint="@string/enter_habit_name"
        android:singleLine="true"
        android:textAppearance="@style/text_style"
        android:textSize="14sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_habit" />

    <ImageButton
        android:id="@+id/bt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:alpha="0.5"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_cancel_black"

        app:layout_constraintBottom_toBottomOf="@id/et_habit_name"
        app:layout_constraintRight_toRightOf="@id/et_habit_name"
        app:layout_constraintTop_toTopOf="@id/et_habit_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_add_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"

        android:text="@string/add"
        android:textAppearance="@style/text_style"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_habit_name" />

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:background="@drawable/bg_circle"
        android:src="@drawable/ic_cancel_black"
        app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_add_habit" />

</androidx.constraintlayout.widget.ConstraintLayout>